--------------------------
Changes in 1.9 (not yet released)

- Bugfix: CGUITreeView no longer dropping EGET_TREEVIEW_NODE_SELECT events when moving mouse while clicking
- CGUITreeView now shows expand icon (+/-) for sub-nodes with correct text-color
- Bugfix: CGUITreeView now aligns scrollbars correct so they work on resize
- obj/mtl loader no longer messes up bump textures when the name starts with a number
- CImageLoaderBMP now supports loading 1-bit images with palette data
- Hardware meshbuffers are now deleted when they hold the last reference to a meshbuffer
- Variable order inside SMaterial and SMaterialLayer changed for better packing
- line3d::getClosestPoint can now chose between using line or line segment
- MY3D loader deprecated and disabled by default as MY3D tools can't be found on the web anymore. Also could always be used as external loader.
- createCylinderMesh, createArrowMesh and createConeMesh in GeometryCreator tessellation numbers now for full instead of semi-circle.
  Double your tessellation numbers to get same results as in 1.8
  Sorry had to break as old solution didn't allow for odd numbers. Also was documented otherwise, so was a bug.
- Change in UV's for top/bottom center vertex in CGeometryCreator::createCylinderMesh
- Add some default UV's in CGeometryCreator::createConeMesh
- Bugfix: CTriangleSelector::getTriangles with bounding-box parameter no longer ignores an additionally passed matrix transformation in the box check
- Fix: CGUITabControl now catching EMIE_LMOUSE_PRESSED_DOWN
- Add options for transparency node sorting algorithm.
- CImageWriterPNG now also supports the writeImageToFile param to allow setting compressing level. 0 stays default, 1-10 for range increasing compression level.
- Add io::IUserData which can be set in SMaterial to make it easer passing additional material values to shaders
- Add lens shift support for the camera and the perspective projection functions